--- a/src/index.css
+++ b/src/index.css
@@ -278,6 +278,11 @@ body {
   flex-direction: column;
   gap: 1.6rem;
 }
+@media only screen and (max-width: 37.5) {
+  .details section {
+    padding: 2rem;
+  }
+}
 
 .details img {
   width: 33%;
