fix: adjust rating star component layout for better responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -278,11 +278,11 @@ body {
   flex-direction: column;
   gap: 1.6rem;
 }
-@media only screen and (max-width: 37.5) {
+/* @media only screen and (max-width: 37.5) {
   .details section {
     padding: 2rem;
-  }
-}
+  } */
+/* } */
 
 .details img {
   width: 33%;
